syntax = "proto3";

package loco.deployment.v1;

import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/loco-team/loco/shared/proto/deployment/v1;deploymentv1";

enum DeploymentPhase {
  DEPLOYMENT_PHASE_UNSPECIFIED = 0;
  DEPLOYMENT_PHASE_PENDING = 1;
  DEPLOYMENT_PHASE_RUNNING = 2;
  DEPLOYMENT_PHASE_SUCCEEDED = 3;
  DEPLOYMENT_PHASE_FAILED = 4;
  DEPLOYMENT_PHASE_CANCELED = 5;
}

service DeploymentService {
  rpc CreateDeployment(CreateDeploymentRequest) returns (CreateDeploymentResponse);
  rpc GetDeployment(GetDeploymentRequest) returns (GetDeploymentResponse);
  rpc ListDeployments(ListDeploymentsRequest) returns (ListDeploymentsResponse);
  rpc StreamDeployment(StreamDeploymentRequest) returns (stream DeploymentEvent);
}

message Port {
  int32 port = 1;
  string protocol = 2;
}

message ResourceSpec {
  optional string cpu = 1;
  optional string memory = 2;
}

message HealthCheckConfig {
  optional string path = 1;
  optional int32 interval = 2;
  optional int32 timeout = 3;
  optional int32 fail_threshold = 4;
  optional int32 startup_grace_period = 5;
}

message DeploymentMetricsConfig {
  optional bool enabled = 1;
  optional string path = 2;
  optional int32 port = 3;
}

message DeploymentSpec {
  optional string image = 1;
  optional string dockerfile_path = 2;
  optional string build_type = 3;
  optional string cpu = 4;
  optional string memory = 5;
  optional int32 initial_replicas = 6;
  optional HealthCheckConfig health_check = 7;
  map<string, string> env = 8;
  optional DeploymentMetricsConfig metrics = 9;
}

message Deployment {
   int64 id = 1;
   int64 app_id = 2;
   string image = 6;
   int32 replicas = 7;
   DeploymentPhase status = 8;
   bool is_current = 9;
   optional string message = 10;
   optional string error_message = 11;
   int64 created_by = 12;
   google.protobuf.Timestamp created_at = 13;
   optional google.protobuf.Timestamp started_at = 14;
   optional google.protobuf.Timestamp completed_at = 15;
   google.protobuf.Timestamp updated_at = 16;
   int32 schema_version = 17;
   optional google.protobuf.Struct spec = 18;
}

message CreateDeploymentRequest {
  int64 app_id = 1;
  DeploymentSpec spec = 2;
}

message CreateDeploymentResponse {
  Deployment deployment = 1;
  string message = 2;
}

message GetDeploymentRequest {
  int64 deployment_id = 1;
}

message GetDeploymentResponse {
  Deployment deployment = 1;
}

message ListDeploymentsRequest {
  int64 app_id = 1;
  optional int32 limit = 2;
  optional int32 offset = 3;
}

message ListDeploymentsResponse {
  repeated Deployment deployments = 1;
  int64 total = 2;
}

message StreamDeploymentRequest {
  int64 deployment_id = 1;
}

message DeploymentEvent {
  int64 deployment_id = 1;
  DeploymentPhase status = 2;
  string message = 3;
  google.protobuf.Timestamp timestamp = 4;
  optional string error_message = 5;
}
